--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 101: High Noon (SOTJ)</h2>
+                    <h5>Sketch Post, June 8, 2025</h5>
+                    <h4>Sketch: June 7, 2025</h4>
+                    <p>Sketch Time: 70-minutes</p>
+                    <p>When the sun hits our local meridian:</p>
+                    <img id="sketchDay101" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiadpnrb2kb5dxozwcaqivu2bkiu26jyzmxyve4t7er25y3azzzsuu@jpeg" height="200" alt="My sketch of High Noon after 70 minutes.">
+                    <h6>My sketch of High Noon after 70 minutes.</h6>
+                    <br>
+                    <img id="realDay101" class="sketchImage" src="https://cards.scryfall.io/large/front/8/7/879d2dd8-866f-4883-9c69-4ebad476d4a6.jpg?1714001602" height="200" alt="(Original Artist: Eduardo Francisco)"></img>
+                    <h6>(Original Artist: Eduardo Francisco) <a href="https://scryfall.com/card/potj/15p/high-noon" target="_blank" title="High Noon">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lr5aky6wgk22" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 100🎉: Rending Vines (SOK)</h2>
                     <h5>Sketch Post, June 7, 2025</h5>
                     <h4>Sketch: June 6, 2025</h4>
