--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 102: Comet, Stellar Pup (UNF)</h2>
+                    <h5>Sketch Post, June 9, 2025</h5>
+                    <h4>Sketch: June 8, 2025</h4>
+                    <p>Sketch Time: 58-minutes</p>
+                    <p>Final day of removal cards for my scryfall random sketch commander deck. A fitting end to have a planeswalker with randomized abilities.</p>
+                    <img id="sketchDay102" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreighklvtysh3xh7kfavvxznjjr3eo4ep6rrfzmjesrlapo43ir6qke@jpeg" height="200" alt="My sketch of Comet, Stellar Pup after 58 minutes.">
+                    <h6>My sketch of Comet, Stellar Pup after 58 minutes.</h6>
+                    <br>
+                    <img id="realDay102" class="sketchImage" src="https://cards.scryfall.io/large/front/a/7/a76fa8d4-923d-4afc-ba47-ba10fc0fe46e.jpg?1685554101" height="200" alt="(Original Artist: Jeff Miracola)"></img>
+                    <h6>(Original Artist: Jeff Miracola) <a href="https://scryfall.com/card/unf/166/comet-stellar-pup" target="_blank" title="Comet, Stellar Pup">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lr7sc2v3lc2i" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 101: High Noon (SOTJ)</h2>
                     <h5>Sketch Post, June 8, 2025</h5>
                     <h4>Sketch: June 7, 2025</h4>
