--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 103: Tormenting Voice (ZNR)</h2>
+                    <h5>Sketch Post, June 10, 2025</h5>
+                    <h4>Sketch: June 9, 2025</h4>
+                    <p>Sketch Time: 51-minutes</p>
+                    <p>Think this is the only big-creature-roaring art of this card. Three are the bolas/ugin related, and one is inistrad being inistrad.Also this is my 1st random card of the "card-advantage" weeks.</p>
+                    <img id="sketchDay103" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihw2rdokmppckfza2id35kwewmpxvti7xczoxjzp7vblyxlge23im@jpeg" height="200" alt="My sketch of Tormenting Voice after 51 minutes.">
+                    <h6>My sketch of Tormenting Voice after 51 minutes.</h6>
+                    <br>
+                    <img id="realDay103" class="sketchImage" src="https://cards.scryfall.io/large/front/6/d/6da46103-a14c-4aa2-92fc-fd758335caf4.jpg?1604198268" height="200" alt="(Original Artist: Izzy)"></img>
+                    <h6>(Original Artist: Izzy) <a href="https://scryfall.com/card/znr/172/tormenting-voice" target="_blank" title="Tormenting Voice">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lrcd7dm4tc2g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 102: Comet, Stellar Pup (UNF)</h2>
                     <h5>Sketch Post, June 9, 2025</h5>
                     <h4>Sketch: June 8, 2025</h4>
