--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn">  
+            <div class="leftcolumn"> 
+                <div class="card post">
+                    <h2>Day 104: Reforge the Soul (INR)</h2>
+                    <h5>Sketch Post, June 11, 2025</h5>
+                    <h4>Sketch: June 10, 2025</h4>
+                    <p>Sketch Time: 51-minutes</p>
+                    <p>Love the miracle mechanic. And after this sketch, I want to invest in some blending tools and eraser pens, but I'm happy with what I was able to make with just no.2 pencils.</p>
+                    <img id="sketchDay104" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidkc6phukysby454n62yaqtszss5okkszmcrbrqco4r3ywntaamhq@jpeg" height="200" alt="My sketch of Reforge the Soul after 51 minutes.">
+                    <h6>My sketch of Reforge the Soul after 51 minutes.</h6>
+                    <br>
+                    <img id="realDay104" class="sketchImage" src="https://cards.scryfall.io/large/front/1/c/1c3509c6-2ae7-45be-8ac9-4d14d69db32f.jpg?1736468201" height="200" alt="(Original Artist: Jaime Jones)"></img>
+                    <h6>(Original Artist: Jaime Jones) <a href="https://scryfall.com/card/inr/167/reforge-the-soul" target="_blank" title="Reforge the Soul">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lrevxhj3w22z" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div> 
                 <div class="card post">
                     <h2>Day 103: Tormenting Voice (ZNR)</h2>
                     <h5>Sketch Post, June 10, 2025</h5>
