--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>Day 105: Uba Mask (CHK)</h2>
+                    <h5>Sketch Post, June 12, 2025</h5>
+                    <h4>Sketch: June 11, 2025</h4>
+                    <p>Sketch Time: 70-minutes</p>
+                    <p>Oracle text for the 2nd line: <br/>"Each player may play lands and cast spells from among cards they exiled with this artifact this turn." <br/><br/>So this card forces impulse draws on all players. Neat.</p>
+                    <img id="sketchDay105" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreicpurvq3kjrbyg2qy7542jey7p3usgmnorofcxs4y3y4io222fhny@jpeg" height="200" alt="My sketch of Uba Mask after 70 minutes.">
+                    <h6>My sketch of Uba Mask after 70 minutes.</h6>
+                    <br>
+                    <img id="realDay105" class="sketchImage" src="https://cards.scryfall.io/large/front/f/a/fa3ecb4e-d08f-4fac-8842-c3e772b95bd5.jpg?1562766086" height="200" alt="(Original Artist: Randy Gallegos)"></img>
+                    <h6>(Original Artist: Randy Gallegos) <a href="https://scryfall.com/card/chk/272/uba-mask" target="_blank" title="Uba Mask">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lrhk54ftws22" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 104: Reforge the Soul (INR)</h2>
                     <h5>Sketch Post, June 11, 2025</h5>
                     <h4>Sketch: June 10, 2025</h4>
