--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>Day 106: Inscription of Insight (ZNR)</h2>
+                    <h5>Sketch Post, June 13, 2025</h5>
+                    <h4>Sketch: June 12, 2025</h4>
+                    <p>Sketch Time: 35-minutes</p>
+                    <p>It has been 47 days since the last random monoblue card for this daily randomized sketch project.</p>
+                    <img id="sketchDay106" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigl3hsfsqwrteqw5pul7jc7humtzaky3lgyc2qtwyeokrxno4hsd4@jpeg" height="200" alt="My sketch of Inscription of Insight after 35 minutes.">
+                    <h6>My sketch of Inscription of Insight after 35 minutes.</h6>
+                    <br>
+                    <img id="realDay106" class="sketchImage" src="https://cards.scryfall.io/large/front/2/8/281cdb1c-21ae-4430-8e0f-c993f52ba891.jpg?1604194137" height="200" alt="(Original Artist: Zoltan Boros)"></img>
+                    <h6>(Original Artist: Zoltan Boros) <a href="https://scryfall.com/card/znr/61/inscription-of-insight" target="_blank" title="Inscription of Insight">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lrjtyi5dqk2k" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 105: Uba Mask (CHK)</h2>
                     <h5>Sketch Post, June 12, 2025</h5>
                     <h4>Sketch: June 11, 2025</h4>
