--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>Day 107: Curse of Vengeance (C16)</h2>
+                    <h5>Sketch Post, June 14, 2025</h5>
+                    <h4>Sketch: June 13, 2025</h4>
+                    <p>Sketch Time: 22-minutes</p>
+                    <p>Even scryfall random knows what's up today.</p>
+                    <img id="sketchDay107" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreied4ths52m6u2ktq2snwbidp4rljkdly6q4pxtaa74ppj32n6nzbu@jpeg" height="200" alt="My sketch of Curse of Vengeance after 22 minutes.">
+                    <h6>My sketch of Curse of Vengeance after 22 minutes.</h6>
+                    <br>
+                    <img id="realDay107" class="sketchImage" src="https://cards.scryfall.io/large/front/2/2/22e7d0e3-a87c-414f-8f12-314083539a2a.jpg?1562391714" height="200" alt="(Original Artist: Bastien L. Deharme)"></img>
+                    <h6>(Original Artist: Bastien L. Deharme) <a href="https://scryfall.com/card/c16/12/curse-of-vengeance" target="_blank" title="Curse of Vengeance">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lrmh6q7oec2u" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 106: Inscription of Insight (ZNR)</h2>
                     <h5>Sketch Post, June 13, 2025</h5>
                     <h4>Sketch: June 12, 2025</h4>
