--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>Day 108: Season of Gathering (BLB)</h2>
+                    <h5>Sketch Post, June 15, 2025</h5>
+                    <h4>Sketch: June 14, 2025</h4>
+                    <p>Sketch Time: 90-minutes</p>
+                    <p>I love this artwork. The wood texture & staining feels like this exists as a piece of in-world art depicting a younger Mabel's (or a previous Cragflame wielder's) old adventuring life.</p>
+                    <img id="sketchDay108" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidtdmzouncsmxgbxpf5raqlpipjbsolvkr4f3zbzrrr2ehzxuddz4@jpeg" height="200" alt="My sketch of Season of Gathering after 90 minutes.">
+                    <h6>My sketch of Season of Gathering after 90 minutes.</h6>
+                    <br>
+                    <img id="realDay108" class="sketchImage" src="https://cards.scryfall.io/large/front/7/1/71dd3c27-e0d5-434e-a0f3-4a95245e21c2.jpg?1721426924" height="200" alt="(Original Artist: A. M. Sartor)"></img>
+                    <h6>(Original Artist: A. M. Sartor) <a href="https://scryfall.com/card/blb/192/season-of-gathering" target="_blank" title="Season of Gathering">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lroqo4j4ks2a" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 107: Curse of Vengeance (C16)</h2>
                     <h5>Sketch Post, June 14, 2025</h5>
                     <h4>Sketch: June 13, 2025</h4>
