--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>Day 109: Smuggler's Share (MKC)</h2>
+                    <h5>Sketch Post, June 16, 2025</h5>
+                    <h4>Sketch: June 15, 2025</h4>
+                    <p>Sketch Time: 80-minutes</p>
+                    <p>Less obtrusive than similar effects since it interrupts your opponents with constant "do you pay" reminders. Also, there are a few ways to force a bit of card draw and ramp in the deck so far.</p>
+                    <img id="sketchDay109" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidsjnpzv4io2n5z4huct2viqeewiuykwiylgw2freioy2t4e3nary@jpeg" height="200" alt="My sketch of Smuggler's Share after 80 minutes.">
+                    <h6>My sketch of Smuggler's Share after 80 minutes.</h6>
+                    <br>
+                    <img id="realDay109" class="sketchImage" src="https://cards.scryfall.io/large/front/f/1/f1ced678-5cfd-49ff-9420-6ee52d5edf5a.jpg?1706240636" height="200" alt="(Original Artist: Aaron Miller)"></img>
+                    <h6>(Original Artist: Aaron Miller) <a href="https://scryfall.com/card/mkc/84/smugglers-share" target="_blank" title="Smuggler's Share">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lrrf7dwgqk2g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 108: Season of Gathering (BLB)</h2>
                     <h5>Sketch Post, June 15, 2025</h5>
                     <h4>Sketch: June 14, 2025</h4>
