--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>Day 110: Sword of Light and Shadow (2XM)</h2>
+                    <h5>Sketch Post, June 17, 2025</h5>
+                    <h4>Sketch: June 16, 2025</h4>
+                    <p>Sketch Time: 32-minutes</p>
+                    <p>I'm pretty disappointed that I didn't darken up the shadow part of this sword. More like the Sword of Light and Penumbra.</p>
+                    <img id="sketchDay110" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiesybhbpnvh76545z2r5lqi7bzzbv227yxlridxzpil4i4bfjbugq@jpeg" height="200" alt="My sketch of Sword of Light and Shadow after 32 minutes.">
+                    <h6>My sketch of Sword of Light and Shadow after 32 minutes.</h6>
+                    <br>
+                    <img id="realDay110" class="sketchImage" src="https://cards.scryfall.io/large/front/b/3/b378c8bf-85ed-4d28-aec9-4925d12bca4a.jpg?1599710077" height="200" alt="(Original Artist: Chris Rahn)"></img>
+                    <h6>(Original Artist: Chris Rahn) <a href="https://scryfall.com/card/2xm/298/sword-of-light-and-shadow" target="_blank" title="Sword of Light and Shadow">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lrtusmlats22" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 109: Smuggler's Share (MKC)</h2>
                     <h5>Sketch Post, June 16, 2025</h5>
                     <h4>Sketch: June 15, 2025</h4>
