--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>Day 111: Rise of the Eldrazi (CMM)</h2>
+                    <h5>Sketch Post, June 18, 2025</h5>
+                    <h4>Sketch: June 17, 2025</h4>
+                    <p>Sketch Time: 49-minutes</p>
+                    <p>I do love that the card art is just the Eldrazi Titans kool-aid manning out of their prison.</p>
+                    <img id="sketchDay111" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidkrz5lf4nd772lwmnimn3vfpemzou7hptotzy2x6toofx5odiene@jpeg" height="200" alt="My sketch of Rise of the Eldrazi after 49 minutes.">
+                    <h6>My sketch of Rise of the Eldrazi after 49 minutes.</h6>
+                    <br>
+                    <img id="realDay111" class="sketchImage" src="https://cards.scryfall.io/large/front/4/a/4a4d851b-1fa9-4f5d-a8f6-6967b1ee5b50.jpg?1690002989" height="200" alt="(Original Artist: Eli Minaya)"></img>
+                    <h6>(Original Artist: Eli Minaya) <a href="https://scryfall.com/card/cmm/716/rise-of-the-eldrazi" target="_blank" title="Rise of the Eldrazi">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lrweclb3a225" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 110: Sword of Light and Shadow (2XM)</h2>
                     <h5>Sketch Post, June 17, 2025</h5>
                     <h4>Sketch: June 16, 2025</h4>
