--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>Day 113: Remand (RVR)</h2>
+                    <h5>Sketch Post, June 20, 2025</h5>
+                    <h4>Sketch: June 19, 2025</h4>
+                    <p>Sketch Time: 48-minutes</p>
+                    <p>Me after I smack a fly out of the air.</p>
+                    <img id="sketchDay113" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihqicam47pjzrzghzspsd74yf5xeqqd2ezsjio7yfkiaectfo4psu@jpeg" height="200" alt="My sketch of Remand after 48 minutes.">
+                    <h6>My sketch of Remand after 48 minutes.</h6>
+                    <br>
+                    <img id="realDay113" class="sketchImage" src="https://cards.scryfall.io/large/front/a/5/a5048047-abff-4a1f-8d72-6b758a03542c.jpg?1702429416" height="200" alt="(Original Artist: Mark A. Nelson)"></img>
+                    <h6>(Original Artist: Mark A. Nelson) <a href="https://scryfall.com/card/rvr/59/remand" target="_blank" title="Remand">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ls3f2ar5ys2f" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 112: Into the Time Vortex (WHO)</h2>
                     <h5>Sketch Post, June 19, 2025</h5>
                     <h4>Sketch: June 18, 2025</h4>
