Digital Paint Day 69

--- a/index.html
+++ b/index.html
@@ -28,7 +28,19 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn"> 
+            <div class="leftcolumn">                 
+                <div class="card post">
+                    <h2>Digital Art: Day 69's Wayfarer's Bauble</h2>
+                    <h5>Digital Art Post, June 21, 2025</h5>
+                    <h4>Digital Paint: May 15, 2025</h4>
+                    <p>Paint Time: 512-minutes</p>
+                    <p>This painting really had me experimenting with clip studio paint's brushes and layering, and it is so far the longest I've spent on a single digital painting because of that.</p>
+                    <img id="digitalDay69" class="sketchImage" src="https://cdn.cara.app/production/posts/985c212c-c804-4886-9768-e017f0071388/sorocoroto-2vuu4D1gbxE_ecNlGRbSW-Day69_WayfarersBauble_Cropped-protected-intensity-DEFAULT-V2.png" height="300" alt="My digital painting of Wayfarer's Bauble after 512 after 212 minutes.">
+                    <h6>My digital painting of Wayfarer's Bauble after 512 minutes.</h6>
+                    <br>
+                    <br><a target="_blank" href="https://cara.app/post/985c212c-c804-4886-9768-e017f0071388" title="cara.app/sorocoroto">Link to cara post.</a>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ls4vwo4rws2r" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
                 <div class="card post">
                     <h2>Day 113: Remand (RVR)</h2>
                     <h5>Sketch Post, June 20, 2025</h5>
