--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn">                 
+            <div class="leftcolumn">   
+                <div class="card post">
+                    <h2>Day 114: nspired Tinkering (CLB)</h2>
+                    <h5>Sketch Post, June 22, 2025</h5>
+                    <h4>Sketch: June 20, 2025</h4>
+                    <p>Sketch Time: 50-minutes</p>
+                    <p>During lockdown, I joined an online D&D group as a cleric of Gond from Baldur's Gate, which is how I met my partner. Five years later and we are getting married in less than a week!</p>
+                    <img id="sketchDay114" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreif47hk5cde6uqgqvayzrq246ekjcni6vdgfzm7n44alzxz6akqgua@jpeg" height="200" alt="My sketch of nspired Tinkering after 50 minutes.">
+                    <h6>My sketch of nspired Tinkering after 50 minutes.</h6>
+                    <br>
+                    <img id="realDay114" class="sketchImage" src="https://cards.scryfall.io/large/front/c/1/c1e6b1d3-1ac2-4f20-997e-25c93f1f7897.jpg?1674136627" height="200" alt="(Original Artist: Craig J Spearing)"></img>
+                    <h6>(Original Artist: Craig J Spearing) <a href="https://scryfall.com/card/clb/183/inspired-tinkering" target="_blank" title="nspired Tinkering">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ls75oaknic2g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>              
                 <div class="card post">
                     <h2>Digital Art: Day 69's Wayfarer's Bauble</h2>
                     <h5>Digital Art Post, June 21, 2025</h5>
