Day 115 and Day 114 fixes

--- a/index.html
+++ b/index.html
@@ -30,16 +30,29 @@
         <div class="row">
             <div class="leftcolumn">   
                 <div class="card post">
-                    <h2>Day 114: nspired Tinkering (CLB)</h2>
+                    <h2>Day 115: Flame of Anor (LTR)</h2>
+                    <h5>Sketch Post, June 22, 2025</h5>
+                    <h4>Sketch: June 21, 2025</h4>
+                    <p>Sketch Time: 40-minutes</p>
+                    <p>I did not remember the Balrog having a sword, so it took a bit to figure out why this could destroy an artifact. The flavor text is missing "and its sword flew up in molten fragments."</p>
+                    <img id="sketchDay115" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibneomrpno2a7727hmjyr2cmpitjwbcxhio6mpozuwqaf6kqrkvyy@jpeg" height="200" alt="My sketch of Flame of Anor after 40 minutes.">
+                    <h6>My sketch of Flame of Anor after 40 minutes.</h6>
+                    <br>
+                    <img id="realDay115" class="sketchImage" src="https://cards.scryfall.io/large/front/0/4/04779a7e-b453-48b9-b392-6d6fd0b8d283.jpg?1686969766" height="200" alt="(Original Artist: Yigit Koroglu)"></img>
+                    <h6>(Original Artist: Yigit Koroglu) <a href="https://scryfall.com/card/ltr/203/flame-of-anor" target="_blank" title="Flame of Anor">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lsag76ma4k2g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 114: Inspired Tinkering (CLB)</h2>
                     <h5>Sketch Post, June 22, 2025</h5>
                     <h4>Sketch: June 20, 2025</h4>
                     <p>Sketch Time: 50-minutes</p>
                     <p>During lockdown, I joined an online D&D group as a cleric of Gond from Baldur's Gate, which is how I met my partner. Five years later and we are getting married in less than a week!</p>
-                    <img id="sketchDay114" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreif47hk5cde6uqgqvayzrq246ekjcni6vdgfzm7n44alzxz6akqgua@jpeg" height="200" alt="My sketch of nspired Tinkering after 50 minutes.">
-                    <h6>My sketch of nspired Tinkering after 50 minutes.</h6>
+                    <img id="sketchDay114" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreif47hk5cde6uqgqvayzrq246ekjcni6vdgfzm7n44alzxz6akqgua@jpeg" height="200" alt="My sketch of Inspired Tinkering after 50 minutes.">
+                    <h6>My sketch of Inspired Tinkering after 50 minutes.</h6>
                     <br>
                     <img id="realDay114" class="sketchImage" src="https://cards.scryfall.io/large/front/c/1/c1e6b1d3-1ac2-4f20-997e-25c93f1f7897.jpg?1674136627" height="200" alt="(Original Artist: Craig J Spearing)"></img>
-                    <h6>(Original Artist: Craig J Spearing) <a href="https://scryfall.com/card/clb/183/inspired-tinkering" target="_blank" title="nspired Tinkering">Scryfall Link</a></h6>
+                    <h6>(Original Artist: Craig J Spearing) <a href="https://scryfall.com/card/clb/183/inspired-tinkering" target="_blank" title="Inspired Tinkering">Scryfall Link</a></h6>
                     <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ls75oaknic2g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>              
                 <div class="card post">
