--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">   
                 <div class="card post">
+                    <h2>Day 116: Ishgard, the Holy See // Faith & Grief (FIN)</h2>
+                    <h5>Sketch Post, June 23, 2025</h5>
+                    <h4>Sketch: June 22, 2025</h4>
+                    <p>Sketch Time: 25-minutes</p>
+                    <p>This card is a good transition between the end of my "card-advantage" section and the beginning of the final section of this scryfall/random sketch project: Lands.</p>
+                    <img id="sketchDay116" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidwoeorcmn74vtxvcrds4b7r4q2hmpnfu2azfvcmdqqn56k3augai@jpeg" height="200" alt="My sketch of Ishgard, the Holy See // Faith & Grief after 25 minutes.">
+                    <h6>My sketch of Ishgard, the Holy See // Faith & Grief after 25 minutes.</h6>
+                    <br>
+                    <img id="realDay116" class="sketchImage" src="https://cards.scryfall.io/large/front/0/6/068bc755-9d3d-430b-abc5-c775a5415bf9.jpg?1748706839" height="200" alt="(Original Artist: KOHEI YAMADA)"></img>
+                    <h6>(Original Artist: KOHEI YAMADA) <a href="https://scryfall.com/card/fin/283/ishgard-the-holy-see-faith-&-grief" target="_blank" title="Ishgard, the Holy See // Faith & Grief">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/did:plc:vlb3baqyfxfheceuqyubujfl/post/3lscvonpbks2s" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 115: Flame of Anor (LTR)</h2>
                     <h5>Sketch Post, June 22, 2025</h5>
                     <h4>Sketch: June 21, 2025</h4>
