Update the About Page

--- a/html/about.html
+++ b/html/about.html
@@ -105,10 +105,10 @@
                     </p>
                     <ol type="1">
                         <li><b>creatures (60):</b> The bulk of the sketches are creatures. The <span class="toolTip" title="a commander is also a designation to describe the central card of a Commander deck">commander</span> is currently <a href="https://scryfall.com/card/m15/211/sliver-hivelord" target="_blank">Sliver Hivelord</a>, which <span class="toolTip" title="a Commander deck can only have colors that match the designated commander card for the deck">allows the use of every color</span>.</li>
-                        <li><b>ramp (14?):</b> Adds to mana production. I am thinking of doing at least two weeks of sketches.</li>
-                        <li><b>removal (14?):</b> Disrupting your opponent's plans through cards that would remove their <span class="toolTip" title="cards or tokens that exist on the battlefield"">permanents</span>. Ideally would have targeted and mass removal. Also thinking of doing two weeks for this section.</li>
-                        <li><b>card advantage (14?):</b> Cards that draw cards. Not necessarily replacing itself, but give a positive card exchange, i.e. casting 1 card lets you draw 2+ cards. Two weeks for this one as well.</li>
-                        <li><b>land (21? + basics):</b> I'm hoping to get a lot of <span class="toolTip" title="non-basic land that produces two colors of mana">dual lands</span>, so giving it three full weeks, but I will be randomizing art for each of the six basic land types to help fill in gaps if/when needed.</li>
+                        <li><b>ramp (15):</b> Adds to mana production. I have done two weeks of sketches (one day I did two and felt it shouldn't count as a separate day).</li>
+                        <li><b>removal (21):</b> Disrupting your opponent's plans through cards that would remove their <span class="toolTip" title="cards or tokens that exist on the battlefield"">permanents</span>. Ideally would have targeted and mass removal. I did this for three weeks to try and get a good mix.</li>
+                        <li><b>card advantage (14):</b> Cards that draw cards. Not necessarily replacing itself, but give a positive card exchange, i.e. casting 1 card lets you draw 2+ cards. This one took two weeks.</li>
+                        <li><b>land (28 + basics):</b> I'm hoping to get a lot of <span class="toolTip" title="non-basic land that produces two colors of mana">dual lands</span>, so giving it four full weeks, but I will be randomizing art for each of the six basic land types to help fill in gaps if/when needed.</li>
                     </ol>
                     <a class="jumpToTop" href="">Jump to Top</a>
                     <div id="abt5"></div>                  
