--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn">   
+            <div class="leftcolumn">  
+                <div class="card post">
+                    <h2>Day 117: Axgard Armory (KHM)</h2>
+                    <h5>Sketch Post, June 24, 2025</h5>
+                    <h4>Sketch: June 23, 2025</h4>
+                    <p>Sketch Time: 48-minutes</p>
+                    <p>At first I thought this wasn't bad in this deck; it has 4 equipment. Then I saw I had a Curse, which is also an Aura. And then I saw that it says "and/or", so I'm quite happy with this pull.</p>
+                    <img id="sketchDay117" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihe4yszzsoisadmxdgsmw4k7hceqr6fvo7jpk7rfbi3tyylpwcw5q@jpeg" height="200" alt="My sketch of Axgard Armory after 48 minutes.">
+                    <h6>My sketch of Axgard Armory after 48 minutes.</h6>
+                    <br>
+                    <img id="realDay117" class="sketchImage" src="https://cards.scryfall.io/large/front/f/9/f9c77d35-8418-48fb-b7d7-7cfa763545c5.jpg?1631052487" height="200" alt="(Original Artist: Cliff Childs)"></img>
+                    <h6>(Original Artist: Cliff Childs) <a href="https://scryfall.com/card/khm/250/axgard-armory" target="_blank" title="Axgard Armory">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lsffiq4d2s2x" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div> 
                 <div class="card post">
                     <h2>Day 116: Ishgard, the Holy See // Faith & Grief (FIN)</h2>
                     <h5>Sketch Post, June 23, 2025</h5>
