--- a/html/about.html
+++ b/html/about.html
@@ -22,7 +22,7 @@
                     <a class="navbutton" href="../index.html" title="Main">Main</a>
                     <a class="currentpage" title="About the Project">About the Project</a>
                     <a class="navbutton" href="#" title="The Cards - Coming Soon -">The Cards</a>
-                    <a class="navbutton" href="../allposts.html" title="All Posts">All Posts</a>
+                    <a class="navbutton" href="../posts/allposts.html" title="All Posts">All Posts</a>
                     <a class="navbutton" href="https://moxfield.com/decks/_qrcU7pkgE6lhgQCRw5YHg" target="blank" title="Moxfield List">Moxfield List</a>
                 </div>
             </div>
