--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 118: Saprazzan Cove (MMQ)</h2>
+                    <h5>Sketch Post, June 25, 2025</h5>
+                    <h4>Sketch: June 24, 2025</h4>
+                    <p>Sketch Time: 40-minutes</p>
+                    <p>Rebecca Guay was one of the first names of magic I've heard when getting into the hobby back in the day. So coming across one of her arts for this sketch project was pretty intimidating.</p>
+                    <img id="sketchDay118" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihr2tr5mi4m4yxcrgvr6pqccilvm3r3vf6tu2cze4p5m4hcaststa@jpeg" height="200" alt="My sketch of Saprazzan Cove after 40 minutes.">
+                    <h6>My sketch of Saprazzan Cove after 40 minutes.</h6>
+                    <br>
+                    <img id="realDay118" class="sketchImage" src="https://cards.scryfall.io/large/front/5/2/52a69122-19c0-47ec-8bea-478511ba88e6.jpg?1562380865" height="200" alt="(Original Artist: Rebecca Guay)"></img>
+                    <h6>(Original Artist: Rebecca Guay) <a href="https://scryfall.com/card/mmq/327/saprazzan-cove" target="_blank" title="Saprazzan Cove">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lshrpjz3ec2p" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 117: Axgard Armory (KHM)</h2>
                     <h5>Sketch Post, June 24, 2025</h5>
                     <h4>Sketch: June 23, 2025</h4>
