--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 119: Underground Sea (SUM)</h2>
+                    <h5>Sketch Post, June 26, 2025</h5>
+                    <h4>Sketch: June 25, 2025</h4>
+                    <p>Sketch Time: 25-minutes</p>
+                    <p>I figured I wouldn't be able to afford each card that came up for this deck, given the randomization, but oof.</p>
+                    <img id="sketchDay119" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiap2yzrkvpwbgh6m7nyeookopr6dtk3wk5ql4fywvsaeuzcfqldlu@jpeg" height="200" alt="My sketch of Underground Sea after 25 minutes.">
+                    <h6>My sketch of Underground Sea after 25 minutes.</h6>
+                    <br>
+                    <img id="realDay119" class="sketchImage" src="https://cards.scryfall.io/large/front/0/6/068bb15a-fc2d-42a2-859b-837b946d23c0.jpg?1559592872" height="200" alt="(Original Artist: Rob Alexander)"></img>
+                    <h6>(Original Artist: Rob Alexander) <a href="https://scryfall.com/card/sum/290/underground-sea" target="_blank" title="Underground Sea">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lsknhaxw3k2l" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 118: Saprazzan Cove (MMQ)</h2>
                     <h5>Sketch Post, June 25, 2025</h5>
                     <h4>Sketch: June 24, 2025</h4>
