--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn">  
+            <div class="leftcolumn"> 
+                <div class="card post">
+                    <h2>Day 120: Zoetic Cavern (MKC)</h2>
+                    <h5>Sketch Post, June 27, 2025</h5>
+                    <h4>Sketch: June 26, 2025</h4>
+                    <p>Sketch Time: 34-minutes</p>
+                    <p>I've def moved away from 1-to-1 accuracy to the original art to trying to match the vibe with these land sketches.</p>
+                    <img id="sketchDay120" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreifz3mn6psswsvgaihcuy7fqf5ucuscj5t64hak2mhquh63b4fwstq@jpeg" height="200" alt="My sketch of Zoetic Cavern after 34 minutes.">
+                    <h6>My sketch of Zoetic Cavern after 34 minutes.</h6>
+                    <br>
+                    <img id="realDay120" class="sketchImage" src="https://cards.scryfall.io/large/front/3/7/37f10035-bf05-460d-9390-433caa2570f4.jpg?1706241300" height="200" alt="(Original Artist: Lars Grant-West)"></img>
+                    <h6>(Original Artist: Lars Grant-West) <a href="https://scryfall.com/card/mkc/311/zoetic-cavern" target="_blank" title="Zoetic Cavern">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/did:plc:vlb3baqyfxfheceuqyubujfl/post/3lsmrcmvh722g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div> 
                 <div class="card post">
                     <h2>Day 119: Underground Sea (SUM)</h2>
                     <h5>Sketch Post, June 26, 2025</h5>
