--- a/index.html
+++ b/index.html
@@ -28,7 +28,35 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn"> 
+            <div class="leftcolumn">
+                <div class="card post">
+                    <h2>Day 121: Agadeem's Awakening // Agadeem, the Undercrypt (ZNR)</h2>
+                    <h5>Sketch Post, June 28, 2025</h5>
+                    <h4>Sketch: June 27, 2025</h4>
+                    <p>Sketch Time: 140-minutes</p>
+                    <p>2x the art, 2x the work. I like doing them together though, bc there are a few cards that I need to go back to, and I know the styles aren't going to match now.</p>
+                    <img id="sketchDay121-2" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiadtgikug6wcsvckcamtrldjnso5d3ryi4xsl4xi64zmmzjso2ggu@jpeg" height="200" alt="My sketch of Agadeem's Awakening after 70 minutes.">
+                    <h6>My sketch of Agadeem's Awakening after 70 minutes.</h6>
+                    <img id="sketchDay121-1" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreifvy2jfirvwmqer2kngwmfqmuonnwepdrbllym7nkoxhmfhodwsiy@jpeg" height="200" alt="My sketch of Agadeem, the Undercrypt after 70 minutes.">
+                    <h6>My sketch of Agadeem, the Undercrypt after 70 minutes.</h6>
+                    <br>
+                    <img id="realDay121-2" class="sketchImage" src="https://cards.scryfall.io/large/front/6/7/67f4c93b-080c-4196-b095-6a120a221988.jpg?1604195226" height="200" alt="(Original Artist: Dmitry Burmak)"></img>
+                    <img id="realDay121-1" class="sketchImage" src="https://cards.scryfall.io/large/back/6/7/67f4c93b-080c-4196-b095-6a120a221988.jpg?1604195226" height="200" alt="(Original Artist: Dmitry Burmak)"></img>
+                    <h6>(Original Artist: Dmitry Burmak) <a href="https://scryfall.com/card/znr/90/agadeems-awakening-agadeem-the-undercrypt" target="_blank" title="Agadeem's Awakening // Agadeem, the Undercrypt">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/did:plc:vlb3baqyfxfheceuqyubujfl/post/3lsplujso4s2p" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>               
+                <div class="card post">
+                    <h2>Digital Art: Day 76's Sol Ring</h2>
+                    <h5>Digital Art Post, June 28, 2025</h5>
+                    <h4>Digital Paint: May 23, 2025</h4>
+                    <p>Paint Time: 232-minutes</p>
+                    <p>I got really lucky with scryfall/random getting a sol ring for the randomized edh deck.</p>
+                    <img id="digitalDay76" class="sketchImage" src="https://cdn.cara.app/production/posts/11d0275d-80e3-4b4a-b0d2-9883ee6f40f9/sorocoroto-_RcqgzmvGAYR6xLxnkvRh-Day76_SolRing-protected-intensity-DEFAULT-V2.png" height="300" alt="My digital painting of Sol Ring after 232 minutes.">
+                    <h6>My digital painting of Sol Ring after 232 minutes.</h6>
+                    <br>
+                    <br><a target="_blank" href="https://cara.app/post/11d0275d-80e3-4b4a-b0d2-9883ee6f40f9" title="cara.app/sorocoroto">Link to cara post.</a>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lsosqvrpbs2p" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
                 <div class="card post">
                     <h2>Day 120: Zoetic Cavern (MKC)</h2>
                     <h5>Sketch Post, June 27, 2025</h5>
